--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -62,7 +62,7 @@ The key tasks are as follows:
 
     </details>
 
-    {: .information }
+    {: .note }
     > You may receive a message stating that it "Detected an Azure Functions Project" and asks if you wish to initialize it for optimal use with VS Code. It is safe to select **Yes** when you see this message. You will then **Overwrite** the tasks.json file.
 
     <details markdown="block">
