--- a/docs/01_deploy_app_resources/0103.md
+++ b/docs/01_deploy_app_resources/0103.md
@@ -18,8 +18,8 @@ In this task, you will deploy the Contoso Suites API and dashboard to Azure Appl
 The key tasks are as follows:
 
 1. Navigate to the `.github/workflows/` folder and remove the `jekyll-gh-pages.yml` workflow. Then, rename `api.yml.txt` to `api.yml` and `dashboard.yml.txt` to `dashboard.yml`.
-
-2. Create a new service principal named `TechExcelAzurePaaS` using the following command in the az CLI, being sure to replace `{SUB_ID}` and `{RG}` with your subscription ID and resource group, respectively:
+2. In [the Azure portal](https://portal.azure.com), navigate to the resource group you have created and select the **Container registry** in the resource group. Navigate to the **Access keys** in the **Settings** menu and make note of your **Login server**, **Username**, and **password**. You will need these for GitHub Actions secrets. Also make note of the **Registry name** in order to modify the GitHub Actions workflows.
+3. Create a new service principal named `TechExcelAzurePaaS` using the following command in the az CLI, being sure to replace `{SUB_ID}` and `{RG}` with your subscription ID and resource group, respectively:
 
     ```cmd
     az ad sp create-for-rbac --name "TechExcelAzurePaaS" --json-auth --role contributor --scopes /subscriptions/{SUB_ID}/resourceGroups/{RG}
@@ -27,20 +27,7 @@ The key tasks are as follows:
 
     Retain the JSON output to use in a GitHub Actions secret.
 
-    <details markdown="block">
-    <summary><strong>Expand this section to view the solution</strong></summary>
-
-    - In [the Azure portal](https://portal.azure.com), navigate to the resource group you have created and select the **Container registry** in the resource group.
-    - Navigate to the **Access keys** in the **Settings** menu and make note of your **Login server**, **Username**, and **password**. You will need these for GitHub Actions secrets. Also make note of the **Registry name** in order to modify the GitHub Actions workflows.
-    - Create a new service principal named `TechExcelAzurePaaS` using the following command in the az CLI, being sure to replace `{SUB_ID}` and `{RG}` with your subscription ID and resource group, respectively:
-
-      ```cmd
-      az ad sp create-for-rbac --name "TechExcelAzurePaaS" --json-auth --role contributor --scopes /subscriptions/{SUB_ID}/resourceGroups/{RG}
-      ```
-
-    </details>
-
-3. Create the following GitHub Actions secrets:
+4. Create the following GitHub Actions secrets:
    1. `STREAMLIT_SECRETS` -- Paste in the entirety of your `secrets.toml` file. Be sure to change the value of `[api][endpoint]` from localhost to the URL of your API's App Service.
    2. `ACR_LOGIN_SERVER` -- Retrieve from your container registry's **Access keys** menu.
    3. `ACR_USERNAME` -- Retrieve from your container registry's **Access keys** menu.
@@ -67,8 +54,6 @@ The key tasks are as follows:
 
     - To create a GitHub Actions variable,  switch from the **Secrets** tab to the **Variables** tab. You can then create new repository variables.
 
-        KTODO: add Variable image
-
         ![Add a new GitHub Actions repository-level variable.](../../media/Solution/0103_Variables.png)
 
         You will need to create one variable:
@@ -77,8 +62,8 @@ The key tasks are as follows:
 
     </details>
 
-4. Commit and push your repository changes.
-5. Manually execute the GitHub Actions workflows named **API Deployment** and **Dashboard Deployment** if they do not run automatically.
+5. Commit and push your repository changes.
+6. Manually execute the GitHub Actions workflows named **API Deployment** and **Dashboard Deployment** if they do not run automatically.
 
     <details markdown="block">
     <summary><strong>Expand this section to view the solution</strong></summary>
@@ -91,7 +76,7 @@ The key tasks are as follows:
 
     </details>
 
-6. Connect to your dashboard website and ensure that you can still perform chat with data operations. To test, you can use a question like, "Do I need to pay extra money to use an EV station when I am a guest of the hotel?"
+7. Connect to your dashboard website and ensure that you can still perform chat with data operations. To test, you can use a question like, "Do I need to pay extra money to use an EV station when I am a guest of the hotel?"
 
     {: .note }
     > It may take several minutes for Azure Application Services to be ready to serve your dashboard website. If it does not come up within 5 minutes or so, you could choose to **Stop** and then **Start** the App Service.
