--- a/docs/02_implement_function_calls/0201.md
+++ b/docs/02_implement_function_calls/0201.md
@@ -84,6 +84,7 @@ The key tasks are as follows:
     The completed code for the three Hotels endpoints in `Program.cs` are as follows:
 
     ```csharp
+    // Retrieve the set of hotels from the database.
     app.MapGet("/Hotels", async () => 
     {
         var hotels = await app.Services.GetRequiredService<IDatabaseService>().GetHotels();
@@ -92,6 +93,7 @@ The key tasks are as follows:
         .WithName("GetHotels")
         .WithOpenApi();
 
+    // Retrieve the bookings for a specific hotel.
     app.MapGet("/Hotels/{hotelId}/Bookings/", async (int hotelId) => 
     {
         var bookings = await app.Services.GetRequiredService<IDatabaseService>().GetBookingsForHotel(hotelId);
@@ -100,6 +102,7 @@ The key tasks are as follows:
         .WithName("GetBookingsForHotel")
         .WithOpenApi();
 
+    // Retrieve the bookings for a specific hotel that are after a specified date.
     app.MapGet("/Hotels/{hotelId}/Bookings/{min_date}", async (int hotelId, DateTime min_date) => 
     {
         var bookings = await app.Services.GetRequiredService<IDatabaseService>().GetBookingsByHotelAndMinimumDate(hotelId, min_date);
@@ -130,7 +133,7 @@ The key tasks are as follows:
     </details>
 
 6. Open the Streamlit application and navigate to the **API Integration** page. You should see a drop-down list asking you to select a hotel, followed by a table of bookings for that hotel.
-7. Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a new connection string to the App Service's environment variables called `ContosoSuites`. The Value should be the value of your connection string and the Type should be **SQLAzure**. Azure App Services will automatically add the `SQLAZURECONNSTR_` so you should not add it yourself when creating this variable.
+7. Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a new connection string to the App Service's environment variables called `ContosoSuites`. The Value should be the value of your connection string and the Type should be **SQLAzure**. Azure App Services will automatically add the `SQLAZURECONNSTR_` to the beginning of your environment variable, so you should not add it yourself when creating this variable.
 
     <details markdown="block">
     <summary><strong>Expand this section to view the solution</strong></summary>
