--- a/docs/02_implement_function_calls/0202.md
+++ b/docs/02_implement_function_calls/0202.md
@@ -19,7 +19,7 @@ In the prior task, you populated bookings history data in Azure SQL Database and
 
 The key tasks are as follows:
 
-1. Add three local secrets using `dotnet user-secrets`. They should be named `AzureOpenAI:DeploymentName`, `AzureOpenAI:Endpoint`, and `AzureOpenAI:ApiKey`, and these secret names are case-sensitive.
+1. Add three local secrets to the `src/ContosoSuitesWebAPI` project using `dotnet user-secrets`. They should be named `AzureOpenAI:DeploymentName`, `AzureOpenAI:Endpoint`, and `AzureOpenAI:ApiKey`, and these secret names are case-sensitive.
 
     <details markdown="block">
     <summary><strong>Expand this section to view the solution</strong></summary>
@@ -43,7 +43,7 @@ The key tasks are as follows:
     The code for the `GetBookingsMissingHotelRooms()` method is in the `DatabaseService` class as follows:
 
     ```csharp
-        public async Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms()
+    public async Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms()
         {
             var sql = """
                 SELECT
@@ -90,7 +90,7 @@ The key tasks are as follows:
     The code for the `GetBookingsWithMultipleHotelRooms()` method in the `DatabaseService` class is as follows:
   
     ```csharp
-        public async Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms()
+    public async Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms()
         {
             var sql = """
                 SELECT
@@ -138,7 +138,7 @@ The key tasks are as follows:
 
     ```csharp
     Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms();
-    Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms();
+        Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms();
     ```
 
     </details>
@@ -171,7 +171,7 @@ The key tasks are as follows:
     Then, add `[KernelFunction]` and `[Description()]` descriptors to each of the five methods you want to be available for Semantic Kernel to call.   For example, the `GetHotels()` method   signature would look like:
 
     ```csharp
-        [KernelFunction]
+    [KernelFunction]
         [Description("Get all hotels.")]
         public async Task<IEnumerable<Hotel>> GetHotels()
     ```
@@ -179,7 +179,7 @@ The key tasks are as follows:
     For methods with parameters, include as well a `[Description()]` descriptor for each parameter. For example, the `GetBookingsForHotel()` method   would look like:
 
     ```csharp
-        [KernelFunction]
+    [KernelFunction]
         [Description("Get all bookings for a single hotel.")]
         public async Task<IEnumerable<Booking>> GetBookingsForHotel(
             [Description("The ID of the hotel")] int hotelId
@@ -296,7 +296,7 @@ The key tasks are as follows:
   
     2. Create three environment variables. The first is `AzureOpenAI__DeploymentName` and should have a value of `gpt-4o`. The second is   `AzureOpenAI__Endpoint` and should have a value of your Azure OpenAI endpoint URL. The third is `AzureOpenAI__ApiKey` and should have a value of   your Azure OpenAI API key. After entering data for an application setting, select **Apply** to save the setting.
   
-      ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0201_AddEnvironmentVariable2.png)
+      ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0202_AddEnvironmentVariable2.png)
   
     {: .note }
     > These environment variables should have **two** underscores between "AzureOpenAI" and the name.
