--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
@@ -49,19 +49,19 @@ The key tasks are as follows:
 
     To create a `local.settings.json` file, navigate to the `src\ContosoSuitesVectorizationFunction` directory, create a new file named `local.settings.json`, and add the following content, replacing the bracketed tokens with values from your Azure OpenAI and Azure Cosmos DB services.
 
-        ```json
-        {
-          "IsEncrypted": false,
-          "Values": {
-            "AzureWebJobsStorage": "",
-            "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-            "AzureOpenAIEndpoint": "[YOUR_AZURE_OPENAI_ENDPOINT]",
-            "AzureOpenAIKey": "[YOUR_AZURE_OPENAI_KEY]",
-            "CosmosDBConnectionString": "[YOUR_COSMOS_DB_CONNECTION_STRING]",
-            "EmbeddingDeploymentName": "text-embedding-ada-002"
-          }
-        }
-        ```
+    ```json
+    {
+      "IsEncrypted": false,
+      "Values": {
+        "AzureWebJobsStorage": "",
+        "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+        "AzureOpenAIEndpoint": "[YOUR_AZURE_OPENAI_ENDPOINT]",
+        "AzureOpenAIKey": "[YOUR_AZURE_OPENAI_KEY]",
+        "CosmosDBConnectionString": "[YOUR_COSMOS_DB_CONNECTION_STRING]",
+        "EmbeddingDeploymentName": "text-embedding-ada-002"
+      }
+    }
+    ```
 
       - To retrieve the required Azure OpenAI and Cosmos DB values, open the [Azure portal](https://portal.azure.com/) in a web browser and navigate to the resource group you created.
       - Select the Azure OpenAI service in the resource group.
@@ -152,19 +152,19 @@ The key tasks are as follows:
 
         ![The Upload settings button is highlighted on the deployment completed notification dialog.](../../media/Solution/0302-azure-function-deployment-upload-settings.png)
 
-      - Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. Along with other settings added by the Bicep script and deployment process, you should see the following settings:
-
-        - `AzureOpenAIEndpoint`
-        - `AzureOpenAIKey`
-        - `CosmosDBConnectionString`
-        - `EmbeddingDeploymentName`
-
-        {: .note }
-        > If you do not see these settings, add them using the App settings tab's **+ Add** button.
-
     </details>
 
-5. Verify that the deployed function is working correctly by inserting the following record into the `MaintenanceRequests` container in Cosmos DB. Then, use the Log Stream for the Function App to observe the output.
+5. Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. Along with other settings added by the Bicep script and deployment process, you should see the following settings:
+
+   - `AzureOpenAIEndpoint`
+   - `AzureOpenAIKey`
+   - `CosmosDBConnectionString`
+   - `EmbeddingDeploymentName`
+
+   {: .note }
+   > If you do not see these settings, add them using the App settings tab's **+ Add** button.
+
+6. Verify that the deployed function is working correctly by inserting the following record into the `MaintenanceRequests` container in Cosmos DB. Then, use the Log Stream for the Function App to observe the output.
 
     ```json
     {
@@ -181,27 +181,27 @@ The key tasks are as follows:
     <summary><strong>Expand this section to view the solution</strong></summary>
 
     To verify the function app was deployed successfully and is working correctly:
-      - Open the Log Stream for the Function App by selecting **Log Stream** under **Monitoring** in the left-hand menu of the Function App page in the [Azure portal](https://portal.azure.com/).
-      - Open a new browser window or tab, navigate to the `MaintenanceRequests` container in your Cosmos DB account, and select `Items`.
-      - Insert the following record into the `MaintenanceRequests` container in Cosmos DB.
+       - Open the Log Stream for the Function App by selecting **Log Stream** under **Monitoring** in the left-hand menu of the Function App page in the [Azure portal](https://portal.azure.com/).
+       - Open a new browser window or tab, navigate to the `MaintenanceRequests` container in your Cosmos DB account, and select `Items`.
+       - Insert the following record into the `MaintenanceRequests` container in Cosmos DB.
 
-        ```json
-        {
-          "hotel_id": 12, 
-          "hotel": "The Downtown Plaza Hotel",
-          "source": "customer",
-          "date": "2024-08-11",
-          "details": "The thermostat does not appear to be working in room 328, and the air conditioning (A/C) unit will not turn on to cool down the room.",
-          "room_number": 328
-        }
-        ```
+         ```json
+         {
+           "hotel_id": 12, 
+           "hotel": "The Downtown Plaza Hotel",
+           "source": "customer",
+           "date": "2024-08-11",
+           "details": "The thermostat does not appear to be working in room 328, and the air conditioning (A/C) unit will not turn on to cool down the room.",
+           "room_number": 328
+         }
+         ```
 
-      - Return to the Function Apps **Log Stream** browser window and observe the logs to ensure you see the function execute and verify that it generated vector embeddings for the maintenance request.
-      - Return to the Cosmos DB `MaintenanceRequests` browser window and select the request item that was just inserted to ensure it refreshes and contains a `request_vector` value.
+       - Return to the Function Apps **Log Stream** browser window and observe the logs to ensure you see the function execute and verify that it generated vector embeddings for the maintenance request.
+       - Return to the Cosmos DB `MaintenanceRequests` browser window and select the request item that was just inserted to ensure it refreshes and contains a `request_vector` value.
 
     </details>
 
-6. Populate the `MaintenanceRequests` container with data from the `PropertyMaintenance.json` file in the [src\data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data) of the repository.
+7. Populate the `MaintenanceRequests` container with data from the `PropertyMaintenance.json` file in the [src\data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data) of the repository.
 
     <details markdown="block">
     <summary><strong>Expand this section to view the solution</strong></summary>
@@ -234,8 +234,8 @@ The key tasks are as follows:
 
     </details>
 
-7. Observe the files being processed in the Log Stream and review documents in the Cosmos DB Data Explorer to confirm the function correctly populated the `request_vector` field for newly added documents.
-8. Execute a query to find documents similar to "air conditioning malfunction" using the `VectorDistance()` function via Cosmos DB Data Explorer. You can find the vector embeddings for "air conditioning malfunction" in the `Query_Vector.txt` file in the [src\data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data).
+8. Observe the files being processed in the Log Stream and review documents in the Cosmos DB Data Explorer to confirm the function correctly populated the `request_vector` field for newly added documents.
+9. Execute a query to find documents similar to "air conditioning malfunction" using the `VectorDistance()` function via Cosmos DB Data Explorer. You can find the vector embeddings for "air conditioning malfunction" in the `Query_Vector.txt` file in the [src\data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data).
 
     <details markdown="block">
     <summary><strong>Expand this section to view the solution</strong></summary>
