--- a/docs/06_add_genai_gateway_capabilities_with_api_management/0601.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/0601.md
@@ -76,7 +76,7 @@ The key tasks are as follows:
     - **Name**: This value with be automatically populated with "azure-openai-api," based on the display name you entered. You can edit this, but you should accept the generated value for this exercise.
     - **Description**: This is optional, so you can leave it blank or enter a description, such as "Azure OpenAI API."
     - **Base URL**: This will be automatically created based on the **Name** of your API. Accept the generated value.
-    - **Improve SDK compatibility**: Leave this box unchecked.
+    - **Improve SDK compatibility**: Check this box.
     - **Products**: Leave this empty.
   - Select **Next: Policies** and on the **Policies** tab, define the token limit and emitting policies.
   - To create a token limit policy, check the **Manage token consumption** box and set the following:
