--- a/docs/01_deploy_app_resources/01_01.md
+++ b/docs/01_deploy_app_resources/01_01.md
@@ -100,8 +100,8 @@ If you are cloning your repository, select the **Code** button and then choose t
 
 Create a new Python virtual environment called **aiwins** in the root directory of your cloned repository and activate it.
 
-    {: .note }
-    > A virtual environment (venv) is not absolutely necessary for this project but creating one will decrease the risk of library conflicts between this project and other Python projects you may have on your machine.
+{: .note }
+> A virtual environment (venv) is not absolutely necessary for this project but creating one will decrease the risk of library conflicts between this project and other Python projects you may have on your machine.
 
 <details markdown="block">
 <summary><strong>Expand this section to view the solution</strong></summary>
@@ -111,13 +111,13 @@ To create a virtual environment, perform the following steps:
     - Run the following command: `python -m venv aiwins`. This will create a new virtual environment in the root directory named "aiwins" and make it available.
     - Run the following command to **activate** the virtual environment on MacOS or Linux (including GitHub Codespaces): `source aiwins/bin/activate`. If you are running this in Windows Subsystem for Linux, run the command `source aiwins/Scripts/active`. On Windows using CMD or PowerShell, use `aiwins\Scripts\activate.bat` to activate the virtual environment. Be sure to have the virtual environment active in every console or terminal you use throughout this training!
 
-        {: .note }
-        > In a normal terminal or command prompt, you will see `(aiwins)` before your input prompt. This will let you know that you are working in a Python virtual environment. If you are using the Visual Studio Code terminal, [this may not appear for technical reasons](https://github.com/microsoft/vscode-python/wiki/Activate-Environments-in-Terminal-Using-Environment-Variables). You can mouse over the terminal image to ensure that the virtual environment is active for your terminal.
+    {: .note }
+    > In a normal terminal or command prompt, you will see `(aiwins)` before your input prompt. This will let you know that you are working in a Python virtual environment. If you are using the Visual Studio Code terminal, [this may not appear for technical reasons](https://github.com/microsoft/vscode-python/wiki/Activate-Environments-in-Terminal-Using-Environment-Variables). You can mouse over the terminal image to ensure that the virtual environment is active for your terminal.
 
-        ![In Visual Studio Code, you can mouse over the terminal to view whether your virtual environment is active.](../../media/Solution/0101_VirtualEnvironment.png)
+    ![In Visual Studio Code, you can mouse over the terminal to view whether your virtual environment is active.](../../media/Solution/0101_VirtualEnvironment.png)
 
-        {: .note }
-        > You will need to activate the virtual environment on every new terminal you use. When you are done, you can return to your standard Python environment by running `deactivate` in any environment. Alternatively, you may safely close the console or terminal without deactivation if you desire--it will not harm anything.
+    {: .note }
+    > You will need to activate the virtual environment on every new terminal you use. When you are done, you can return to your standard Python environment by running `deactivate` in any environment. Alternatively, you may safely close the console or terminal without deactivation if you desire--it will not harm anything.
 
 </details>
 
@@ -136,9 +136,11 @@ Install all requirements in the file `src/ContosoSuitesDashboard/requirements.tx
 
 Create a new resource group in your subscription. This subscription **must** have access to Azure OpenAI and you should deploy the resource group to a region that supports GPT-4o.
 
-> **Important**: You must deploy to an Azure region that supports the **GPT-4o, 2024-05-13** model. You must create your Azure OpenAI resource in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#model-summary-table-and-region-availability).
+{: .important }
+> You must deploy to an Azure region that supports the **GPT-4o, 2024-05-13** model. You must create your Azure OpenAI resource in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#model-summary-table-and-region-availability).
 
-> **Important**: Abstractive summarization in the Azure AI Services Language service is only supported in a subset of regions. You must create your Azure AI Language service in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/language-service/summarization/region-support) to allow abstractive summarization to be performed in a later exercise.
+{: .important }
+> Abstractive summarization in the Azure AI Services Language service is only supported in a subset of regions. You must create your Azure AI Language service in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/language-service/summarization/region-support) to allow abstractive summarization to be performed in a later exercise.
 
 <details markdown="block">
 <summary><strong>Expand this section to view the solution</strong></summary>
