--- a/docs/01_deploy_app_resources/01_01.md
+++ b/docs/01_deploy_app_resources/01_01.md
@@ -107,17 +107,18 @@ Create a new Python virtual environment called **aiwins** in the root directory 
 <summary><strong>Expand this section to view the solution</strong></summary>
 
 To create a virtual environment, perform the following steps:
-    - Open up a terminal to the root directory of your Git repo. **For example**, if you cloned the repo to `C:\SourceCode\TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins`, open this directory in a command prompt. If you are using GitHub Codespaces, open a new terminal in Visual Studio Code--this will default you to the correct directory.
-    - Run the following command: `python -m venv aiwins`. This will create a new virtual environment in the root directory named "aiwins" and make it available.
-    - Run the following command to **activate** the virtual environment on MacOS or Linux (including GitHub Codespaces): `source aiwins/bin/activate`. If you are running this in Windows Subsystem for Linux, run the command `source aiwins/Scripts/active`. On Windows using CMD or PowerShell, use `aiwins\Scripts\activate.bat` to activate the virtual environment. Be sure to have the virtual environment active in every console or terminal you use throughout this training!
 
-    {: .note }
-    > In a normal terminal or command prompt, you will see `(aiwins)` before your input prompt. This will let you know that you are working in a Python virtual environment. If you are using the Visual Studio Code terminal, [this may not appear for technical reasons](https://github.com/microsoft/vscode-python/wiki/Activate-Environments-in-Terminal-Using-Environment-Variables). You can mouse over the terminal image to ensure that the virtual environment is active for your terminal.
+1. Open up a terminal to the root directory of your Git repo. **For example**, if you cloned the repo to `C:\SourceCode\TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins`, open this directory in a command prompt. If you are using GitHub Codespaces, open a new terminal in Visual Studio Code--this will default you to the correct directory.
+2. Run the following command: `python -m venv aiwins`. This will create a new virtual environment in the root directory named "aiwins" and make it available.
+3. Run the following command to **activate** the virtual environment on MacOS or Linux (including GitHub Codespaces): `source aiwins/bin/activate`. If you are running this in Windows Subsystem for Linux, run the command `source aiwins/Scripts/active`. On Windows using CMD or PowerShell, use `aiwins\Scripts\activate.bat` to activate the virtual environment. Be sure to have the virtual environment active in every console or terminal you use throughout this training!
 
-    ![In Visual Studio Code, you can mouse over the terminal to view whether your virtual environment is active.](../../media/Solution/0101_VirtualEnvironment.png)
+{: .note }
+> In a normal terminal or command prompt, you will see `(aiwins)` before your input prompt. This will let you know that you are working in a Python virtual environment. If you are using the Visual Studio Code terminal, [this may not appear for technical reasons](https://github.com/microsoft/vscode-python/wiki/Activate-Environments-in-Terminal-Using-Environment-Variables). You can mouse over the terminal image to ensure that the virtual environment is active for your terminal.
 
-    {: .note }
-    > You will need to activate the virtual environment on every new terminal you use. When you are done, you can return to your standard Python environment by running `deactivate` in any environment. Alternatively, you may safely close the console or terminal without deactivation if you desire--it will not harm anything.
+![In Visual Studio Code, you can mouse over the terminal to view whether your virtual environment is active.](../../media/Solution/0101_VirtualEnvironment.png)
+
+{: .note }
+> You will need to activate the virtual environment on every new terminal you use. When you are done, you can return to your standard Python environment by running `deactivate` in any environment. Alternatively, you may safely close the console or terminal without deactivation if you desire--it will not harm anything.
 
 </details>
 
@@ -128,7 +129,7 @@ Install all requirements in the file `src/ContosoSuitesDashboard/requirements.tx
 <details markdown="block">
 <summary><strong>Expand this section to view the solution</strong></summary>
 
-- In order to install requirements, make sure that you are in a terminal connected to your virtual environment. Then, navigate to the `src/ContosoSuitesDashboard` folder and execute the command `pip install -r requirements.txt`. This will take several minutes to install but will include all of the Python package requirements necessary for the workshop.
+In order to install requirements, make sure that you are in a terminal connected to your virtual environment. Then, navigate to the `src/ContosoSuitesDashboard` folder and execute the command `pip install -r requirements.txt`. This will take several minutes to install but will include all of the Python package requirements necessary for the workshop.
 
 </details>
 
@@ -165,31 +166,32 @@ To create a resource group using az cli, use the command `az group create`. An e
     <summary><strong>Expand this section to view the solution</strong></summary>
 
     If you have Visual Studio Code installed, you can use the [Bicep extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep) to run Bicep scripts by doing the following:
-      - Open the **src/InfrastructureAsCode/DeployAzureResources.bicep** script.
-      - Use Ctrl+Shift+P (or Cmd+Shift+P on Mac) to open the Visual Studio Code prompt. Then, type `Bicep` into the search menu and choose **Bicep: Deploy Bicep Script**.
 
-          ![Deploy a Bicep script](../../media/Solution/0101_DeployBicepScript.png)
+    1. Open the **src/InfrastructureAsCode/DeployAzureResources.bicep** script.
+    2. Use Ctrl+Shift+P (or Cmd+Shift+P on Mac) to open the Visual Studio Code prompt. Then, type `Bicep` into the search menu and choose **Bicep: Deploy Bicep Script**.
 
-      - Provide a name for the deployment or accept the automatically provided name.
+        ![Deploy a Bicep script](../../media/Solution/0101_DeployBicepScript.png)
 
-          ![Enter a deployment name](../../media/Solution/0101_DeploymentName.png)
+    3. Provide a name for the deployment or accept the automatically provided name.
 
-      - Select the appropriate subscription. This subscription **must** be listed for Azure OpenAI access!
+        ![Enter a deployment name](../../media/Solution/0101_DeploymentName.png)
 
-          ![Select a subscription](../../media/Solution/0101_ChooseSubscription.png)
+    4. Select the appropriate subscription. This subscription **must** be listed for Azure OpenAI access!
 
-      - Select the resource group that you created.
+        ![Select a subscription](../../media/Solution/0101_ChooseSubscription.png)
 
-          ![Choose the resource group you created in this task](../../media/Solution/0101_ChooseResourceGroup.png)
+    5. Select the resource group that you created.
 
-      - There will not be a parameter file for this script, so it is safe to choose **None**.
+        ![Choose the resource group you created in this task](../../media/Solution/0101_ChooseResourceGroup.png)
 
-          ![Choose None for the parameter file](../../media/Solution/0101_ParameterFile.png)
+    6. There will not be a parameter file for this script, so it is safe to choose **None**.
 
-      - At this point, the deployment script will kick off. You can select the link in the **Output** window to view your deployment.
+        ![Choose None for the parameter file](../../media/Solution/0101_ParameterFile.png)
 
-          ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
+    7. At this point, the deployment script will kick off. You can select the link in the **Output** window to view your deployment.
 
-      - Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an API Management service, an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
+        ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
+
+    8. Once your deployment completes, you should see all of your resources in the resource group you have created. These include: an API Management service, an App Service (for API), an App Service (for dashboard), an App Service plan (for API and dashboard), an App Service plan (for Function app), an Application Insights instance, an Azure Cosmos DB account, an Azure OpenAI workspace, a Container registry, a Function App, a Language service, a Log Analytics workspace, a Search service, a Speech service, a SQL database, a SQL server, and a Storage account.
 
     </details>
