--- a/docs/01_deploy_app_resources/01_03.md
+++ b/docs/01_deploy_app_resources/01_03.md
@@ -67,7 +67,7 @@ Additionally, create the following GitHub Actions variable:
 <details markdown="block">
 <summary><strong>Expand this section to view the solution</strong></summary>
 
-- To create a GitHub Actions secret, navigate to your forked GitHub repository and select the **Settings** menu. From there, navigate to **Secrets and variables** and select the **Actions** menu. You can then create new repository secrets.
+1. To create a GitHub Actions secret, navigate to your forked GitHub repository and select the **Settings** menu. From there, navigate to **Secrets and variables** and select the **Actions** menu. You can then create new repository secrets.
 
     ![Add a new GitHub Actions repository-level secret.](../../media/Solution/0103_Secrets.png)
 
@@ -79,7 +79,7 @@ Additionally, create the following GitHub Actions variable:
     4. `ACR_PASSWORD` -- Retrieve from your container registry's **Access keys** menu.
     5. `AZURE_CREDENTIALS` -- Paste in the entirety of the JSON output from running `az ad sp create-for-rbac`.
 
-- To create a GitHub Actions variable,  switch from the **Secrets** tab to the **Variables** tab. You can then create new repository variables.
+2. To create a GitHub Actions variable,  switch from the **Secrets** tab to the **Variables** tab. You can then create new repository variables.
 
     ![Add a new GitHub Actions repository-level variable.](../../media/Solution/0103_Variables.png)
 
